clusters/KC-Int/deployments/default/tasmoadmin/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasmoadmin
spec:
  replicas: 0
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tasmoadmin
  template:
    metadata:
      labels:
        app: tasmoadmin
    spec:
      containers:
        - name: tasmoadmin
          image: ghcr.io/tasmoadmin/tasmoadmin:v4.1.1
          volumeMounts:
            - name: pvc
              mountPath: /data
              subPath: data
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: tasmoadmin
